# scraper-take-home

./: README.md  pyproject.toml  urls.txt
output/: permits.json  permits.strict.json
src/tabs_scraper/: __main__.py  client.py  config.py  models.py  parser.py  pipeline.py  url_utils.py
tests/: test_config.py  test_models.py  test_parser.py  test_pipeline.py  test_url_utils.py
tests/fixtures/: TABS2024012754.html
